--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <a href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Skills</a>
-                <a href="Resume.pdf
-                " download="Jatin_Resume">Resume</a>
+                <!-- <a href="Resume.pdf
+                " download="Jatin_Resume">Resume</a> -->
                 <a href="#">Contact</a>
                 <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
             </div>
