--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <title>Jatin Portfolio</title>
 </head>
@@ -15,30 +16,27 @@
                 Jatin <span></span>
             </div>
             <div class="links">
-                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100"><a href="#">Home</a></div>
-                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200"><a href="#">About</a></div>
-                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300"><a href="#">Skills</a></div>
-                <!-- <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400"><a href="Resume.pdf" download="Jatin_Resume">Resume</a></div> -->
-                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="500"><a href="#">Contact</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100"><a href="#home">Home</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200"><a href="#about">About</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300"><a href="#skills">Skills</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="500"><a href="#contact">Contact</a></div>
         </div>
         <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
     </div>
         <div class="dropdown">
             <div class="links">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Skills</a>
-                <!-- <a href="Resume.pdf
-                " download="Jatin_Resume">Resume</a> -->
-                <a href="#">Contact</a>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#skills">Skills</a>
+                <a href="#contact">Contact</a>
                 <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
             </div>
         </div>
     </nav>
-    <section>
+    <section id="home">
         <div class="main-container">
             <div class="image" data-aos="zoom-out" data-aos-duration="3000">
-                <img src="PP.png" alt="Profile Picture">
+                <img src="IMG_6257.jpg" alt="Profile Picture">
             </div>
             <div class="content">
                 <h1 data-aos="fade-left" data-aos-duration="1500" data-aos-delay="700">Hey I'm <span>Jatin</span></h1>
@@ -46,9 +44,7 @@
                 <p data-aos="flip-down" data-aos-duration="1500" data-aos-delay="1100"></p>
                 <div class="social-links">
                     <a href="https://github.com/Jatinalwariya" target="_blank" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1300"><i class="fa-brands fa-github"></i></a>
-                    <!-- <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1400"><i class="fa-brands fa-facebook"></i></a> -->
                     <a href="https://www.linkedin.com/in/jatin-alwariya-0668b82a5/" target="_blank" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1500"><i class="fa-brands fa-linkedin"></i></a>
-                    <!-- <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1600"><i class="fa-brands fa-twitter"></i></a> -->
                 </div>
                 <div class="btn" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="1800">
                     <a href="Resume.pdf" download="Jatin_Resume"><button>Download Resume</button></a>
@@ -56,6 +52,62 @@
             </div>
         </div>
     </section>
+    <section id="about">
+        <div class="about-container" data-aos="fade-up" data-aos-duration="1500">
+            <h2>About Me</h2>
+            <p>Hi, I'm Jatin, a passionate and dedicated software developer. 
+            With experience in projects like automated aquariums and innovative bots, I love solving real-world problems through technology.
+            My journey includes mastering tools and technologies that make development efficient and scalable.</p>
+            <p>I thrive in dynamic environments where I can learn, grow, and contribute to meaningful projects. 
+                In addition to technical skills, I have a strong sense of collaboration and adaptability, essential for team success.</p>
+        </div>
+    </section>
+    <section id="skills">
+        <div class="skills-container" data-aos="fade-up" data-aos-duration="1500">
+            <h2>Skills</h2>
+            <p>Here are some of the tools and technologies I excel in:</p>
+            <div class="skills-grid">
+                <div class="skill-item">
+                    <i class="fab fa-html5"></i>
+                    <h3>HTML</h3>
+                    <p>Proficient in creating semantic and responsive web structures.</p>
+                </div>
+                <div class="skill-item">
+                    <i class="fab fa-css3-alt"></i>
+                    <h3>CSS</h3>
+                    <p>Proficient in styling, animations, and responsive design.</p>
+                </div>
+                <div class="skill-item">
+                    <i class="fab fa-js-square"></i>
+                    <h3>JavaScript</h3>
+                    <p>Skilled in dynamic web applications and DOM manipulation.</p>
+                </div>
+                <div class="skill-item">
+                    <i class="fab fa-python"></i>
+                    <h3>Python</h3>
+                    <p>Good at scripting, data processing, and backend development.</p>
+                </div>
+                <div class="skill-item">
+                    <i class="fab fa-code"></i>
+                    <h3>C++</h3>
+                    <p>I am a skilled software developer proficient in C++ and have a strong foundation in Data Structures and Algorithms (DSA).</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="contact-container">
+            <h2>Contact Me</h2>
+            <p>If you have any questions or want to reach out, feel free to contact me using the form below.</p>
+            <form action="#" method="POST">
+                <input type="text" id="name" name="name" placeholder="Your Name" required>
+                <input type="email" id="email" name="email" placeholder="Your Email" required>
+                <textarea id="message" name="message" placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </section>
+    
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({offset:0});
